...
            android:layout_gravity="center"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:text="@string/crocodev_inc" />

        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/name"
...
        android:layout_gravity="bottom|end"
        android:layout_weight="8"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/settings_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/doge"
            android:onClick="settings_button"
            android:scaleType="fitEnd"
...
