...
            android:hint="@string/Размер_вклада"
            android:textColor="#222222"
            android:textColorHint="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:textColor="#222222"
            android:textColorHint="#000000"
...
